# admin_artur

./: .env  README.md  pyproject.toml
config/: settings.py  urls.py
menu/: admin.py  forms.py  models.py  urls.py  views.py
menu/migrations/: 0001_initial.py
menu/templates/menu/: base.html  category_confirm_delete.html  category_detail.html  category_form.html  category_list.html  dish_confirm_delete.html  dish_detail.html  dish_list.html
pub_menu/: apps.py  urls.py  views.py
pub_menu/templates/pub_menu/: index.html  main_v1.css  menu_v1.js  menu_v1.json
users/: forms.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
